# Python-Website-Tutorial

./: forms.py  main.py  mainroutes.py  models.py  program.py  pyproject.toml
static/css/: homepage.css  showlists.css  viewlist.css
templates/: base.html  home.html  homepage.html  login.html  notify.html  register.html  showlists.html  viewlist.html
