[tool.poetry]
name = "python-website-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
flask-sqlalchemy = "^2.4"
PyMySQL = "^0.9.3"
flask-wtf = "^0.14.3"
wtforms = "^2.3"
flask-login = "^0.5.0"
email-validator = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
